wordpress/deployment/wordpress-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress
    tier: app
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: app
    spec:
      imagePullSecrets:
      - name: azureregistrykey
      containers:
      - name: wordpress-nginx
        image: nginx:1.17.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: tcp
          containerPort: 80
        volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html
        - name: wordpress-share
          mountPath: /var/www/html/wp-content/uploads
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: nginx-log
          mountPath: /var/log/nginx
      - name: wordpress
        image: tokentuber.azurecr.io/tokentuber:30
        imagePullPolicy: IfNotPresent
        ports:
        - name: tcp
          containerPort: 9000
        volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html
      volumes:
      - name: wordpress-data
        emptyDir: {}
      - name: nginx-log
        hostPath:
          path: /var/log/nginx
          type: DirectoryOrCreate
      - name: nginx-config
        configMap:
          name: wordpress
          items:
            - key: default.conf  
              path: default.conf
          defaultMode: 420
      - name: wordpress-share
        persistentVolumeClaim:
          claimName: wordpress-share
