wordpress/deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-tokentuber
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: internal-dev.tokentuber.com
    http:
      paths:
      - backend:
          serviceName: wordpress-dev
          servicePort: 80
  tls:
  - hosts:
    - internal-dev.tokentuber.com
    - tokentuber.com
    secretName: token-secret-dev
